--- a/content/projects/project1/index.Rmd
+++ b/content/projects/project1/index.Rmd
@@ -86,10 +86,9 @@ country_list <- c("United States","India", "Germany")
 ```
 
 First, can you produce this plot?
-![](/img/projects/gdp1.png)
 
 ```{r gdp1, echo=FALSE, out.width="100%"}
-#knitr::include_graphics("img/projects/gdp1.png", error = FALSE)
+knitr::include_graphics("gdp1.png", error = FALSE)
 ```
 
 ```{r gdp_plot}
@@ -156,7 +155,7 @@ wider_frame %>%
 ```{r gdp2, echo=FALSE, out.width="100%"}
 #knitr::include_graphics("img/projects/gdp2.png", error = FALSE)
 ```
-![](/img/projects/gdp2.png)
+![](gdp2.png)
 
 > What is this last chart telling you? Can you explain in a couple of paragraphs the different dynamic among these three countries? 
 
