--- a/content/projects/project4/index.Rmd
+++ b/content/projects/project4/index.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Airbnb in Copenhagen - a Price Forecast Analysis"
-output: html_document
+output: html_document:
+  df_print: kable
 ---
 
 ```{r load_libraries_data, message=FALSE, warning=FALSE, echo=FALSE}
